# ecommerce-chat-support

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_seed.py
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 1bf7308524c4_.py  20260218_0001_init_chat_schema.py  7a36eb36b555_initial_schema.py  c18f4961b8dc_agent_user_models.py
app/: main.py
app/api/: router.py
app/api/v1/routes/: agent.py  customer.py  health.py  realtime.py
app/application/: __init__.py  conversation_service.py
app/core/: __init__.py  config.py  db.py  rate_limit.py  security.py
app/domain/: __init__.py  enums.py  exceptions.py  state_machine.py
app/infra/: __init__.py
app/infra/db/: __init__.py  models.py  repositories.py  seed.py
app/infra/realtime/: __init__.py  channels.py  events.py  hub.py  publisher.py
app/schemas/: __init__.py  agent_auth.py  agent_chat.py  common.py  conversation.py  customer_chat.py  message.py
app/services/: agent_auth_service.py  agent_service.py  conversation_service.py  errors.py
app/utils/: conversation_service.py  errors.py
docs/: 01-system-architecture.md  02-api-and-events.md  03-validation-checklist.md
docs/architecture/: 01-system-architecture.md  02-api-and-events.md  03-roadmap.md
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: main.tsx
frontend/src/app/: App.css  AppRouter.tsx
frontend/src/pages/: AgentWorkspacePage.tsx  HomePage.tsx
frontend/src/shared/lib/: session.ts
tests/unit/: test_agent_service.py  test_bot_flow_service.py  test_rate_limit.py  test_state_machine.py
web/: index.html  package-lock.json  package.json
web/src/: main.tsx
web/src/app/: AppRouter.tsx  global.css  store.ts
web/src/pages/: AgentLoginPage.css  AgentLoginPage.tsx  AgentWorkspacePage.css  AgentWorkspacePage.tsx  HomePage.css  HomePage.tsx  PageLayout.css
web/src/shared/lib/: agentIdentity.ts  (+2 more)
(+22 files in other folders)
